--- a/MVCFileManagerDemo/Views/File/Index.cshtml
+++ b/MVCFileManagerDemo/Views/File/Index.cshtml
@@ -7,12 +7,15 @@
 
 <html>
 <head>
+    <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width" />
     <title>Index</title>
     <link href="~/Content/themes/default/easyui.css" rel="stylesheet" />
-    <link href="~/Content/file.css" rel="stylesheet" />
+    <link href="~/Content/file.css" rel="stylesheet" />   
     <link href="~/Content/themes/color.css" rel="stylesheet" />
     <link href="~/Content/themes/icon.css" rel="stylesheet" />
+    <link href="~/Content/webuploader.css" rel="stylesheet" />
+  
 </head>
 <body>
     <div class="easyui-layout" style="width: 100%; height: 100%;">
@@ -60,7 +63,7 @@
     <script src="~/Scripts/jquery-easyui-min.js"></script>
     <script src="~/Scripts/easyui-lang-zh_CN.js"></script>
     <script src="~/Scripts/WebUploader/webuploader.js"></script>
-    <script src="~/Scripts/upload.js"></script>
+    @*<script src="~/Scripts/upload.js"></script>*@
     <script src="~/Scripts/file.js"></script>
    
 
